tests/paczka1/small_fuzzy/86739060.err
Error in line 1: TgMrHi9f S720 83,74
Error in line 9: IgFT3 S452 73,2
